fix z-index issue

--- a/style.css
+++ b/style.css
@@ -128,6 +128,11 @@ main {
   justify-content: space-around;
 }
 
+.heading,
+.sub-heading {
+  z-index: -2;
+}
+
 .heading h2 {
   font-size: 64px;
   font-family: "Roboto", sans-serif;
